force-app/main/default/objects/User/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <description>Agent identification</description>
    <inlineHelpText>Agent identification</inlineHelpText>
    <label>Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>