force-app/main/default/objects/User/fields/AgentExtRef__c.field-meta.xml
<CustomField>
    <fullName>AgentExtRef__c</fullName>
    <description>Reference de l agent DRC ou Stand, envoye par les flux hermes</description>
    <inlineHelpText>Reference de l agent DRC ou Stand, envoye par les flux hermes</inlineHelpText>
    <label>Agent External Ref</label>
    <length>25</length>
    <type>Text</type>
</CustomField>