force-app/main/default/objects/User/fields/ByPassDuplicateRule__c.field-meta.xml
<CustomField>
    <fullName>ByPassDuplicateRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassDuplicateRule</label>
    <type>Checkbox</type>
</CustomField>