force-app/main/default/objects/User/fields/ByPassProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>ByPassProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to evaluate if the user have the ability to by pass or not process builder</description>
    <label>ByPassProcessBuilder</label>
    <type>Checkbox</type>
</CustomField>