force-app/main/default/objects/User/fields/BypassTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassTrigger__c</fullName>
    <label>ByPassTrigger</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP01_AccountAfterInsert</fullName>
            </value>
            <value>
                <fullName>AP01_AccountAfterUpdate</fullName>
            </value>
            <value>
                <fullName>AP02_CaseBeforeInsert</fullName>
            </value>
            <value>
                <fullName>AP02_CaseBeforeUpdate</fullName>
            </value>
            <value>
                <fullName>AP02_CaseAfterInsert</fullName>
            </value>
            <value>
                <fullName>AP02_CaseAfterUpdate</fullName>
            </value>
            <value>
                <fullName>AP01_AccountBeforeInsert</fullName>
            </value>
            <value>
                <fullName>AP01_AccountBeforeUpdate</fullName>
            </value>
            <value>
                <fullName>CarteAfterInsert</fullName>
            </value>
            <value>
                <fullName>AttachmentAfterInsert</fullName>
            </value>
            <value>
                <fullName>SubscriptionTrigger_Custom</fullName>
            </value>
            <value>
                <fullName>AP01_AccountAfter</fullName>
                <isActive>false</isActive>
                <label>AP01_AccountAfter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>