force-app/main/default/objects/User/fields/ByPassWorkflow__c.field-meta.xml
<CustomField>
    <fullName>ByPassWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used for By Pass the workflow execution</description>
    <label>ByPassWorkflow</label>
    <type>Checkbox</type>
</CustomField>