force-app/main/default/objects/User/fields/Equipe__c.field-meta.xml
<CustomField>
    <fullName>Equipe__c</fullName>
    <label>Equipe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipe 1</fullName>
            </value>
            <value>
                <fullName>Equipe 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>