force-app/main/default/objects/User/fields/Group_id_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Group_id_Inbound__c</fullName>
    <label>Group id Inbound</label>
    <length>255</length>
    <type>Text</type>
</CustomField>