force-app/main/default/objects/User/fields/Group_Id_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Group_Id_Outbound__c</fullName>
    <description>Group identification</description>
    <inlineHelpText>Group identification</inlineHelpText>
    <label>Groupe Sortant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>