force-app/main/default/objects/User/fields/Service_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Id__c</fullName>
    <description>Service identification</description>
    <inlineHelpText>Service identification</inlineHelpText>
    <label>Service Sortant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>